--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина -->
+            <!-- Левая бобина - новая структура -->
             <div class="film-reel left-reel">
-                <div class="reel-outer">
-                    <div class="reel-center"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
+                <div class="reel-body">
+                    <div class="reel-center-hole"></div>
+                    <div class="reel-spokes-container">
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                    </div>
+                    <div class="reel-holes-container">
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                    </div>
                 </div>
             </div>
 
@@ -58,22 +62,26 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина -->
+            <!-- Правая бобина - новая структура -->
             <div class="film-reel right-reel">
-                <div class="reel-outer">
-                    <div class="reel-center"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-spoke"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
+                <div class="reel-body">
+                    <div class="reel-center-hole"></div>
+                    <div class="reel-spokes-container">
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                        <div class="reel-spoke"></div>
+                    </div>
+                    <div class="reel-holes-container">
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                    </div>
                 </div>
             </div>
 
@@ -81,6 +89,7 @@
         </div>
     </header>
 
+    <!-- Остальной контент без изменений -->
     <main class="cinema-content">
         <section id="home" class="cinema-page active">
             <div class="page-content">
