--- a/index.html
+++ b/index.html
@@ -13,26 +13,11 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - новая структура -->
+            <!-- Левая бобина - максимально простая структура -->
             <div class="film-reel left-reel">
                 <div class="reel-body">
-                    <div class="reel-center-hole"></div>
-                    <div class="reel-spokes-container">
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                    </div>
-                    <div class="reel-holes-container">
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                    </div>
+                    <!-- Только центральное отверстие -->
+                    <div class="reel-center"></div>
                 </div>
             </div>
 
@@ -62,26 +47,11 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - новая структура -->
+            <!-- Правая бобина - максимально простая структура -->
             <div class="film-reel right-reel">
                 <div class="reel-body">
-                    <div class="reel-center-hole"></div>
-                    <div class="reel-spokes-container">
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                        <div class="reel-spoke"></div>
-                    </div>
-                    <div class="reel-holes-container">
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                        <div class="reel-hole"></div>
-                    </div>
+                    <!-- Только центральное отверстие -->
+                    <div class="reel-center"></div>
                 </div>
             </div>
 
