--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
     
     <header class="cinema-header">
         <div class="header-container">
-            <!-- Левая бобина - 4 отверстия как раньше -->
+            <!-- Левая бобина - обновленная с 6 отверстиями -->
             <div class="film-reel left-reel">
-                <div class="reel-inner">
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
+                <div class="reel-outer">
+                    <div class="reel-inner">
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                    </div>
+                    <div class="inner-spiral"></div>
+                    <div class="wear-effect"></div>
                 </div>
+                <div class="film-shadow"></div>
             </div>
 
             <nav class="film-navigation">
@@ -52,14 +59,21 @@
                 </div>
             </nav>
 
-            <!-- Правая бобина - 4 отверстия как раньше -->
+            <!-- Правая бобина - обновленная с 6 отверстиями -->
             <div class="film-reel right-reel">
-                <div class="reel-inner">
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
-                    <div class="reel-hole"></div>
+                <div class="reel-outer">
+                    <div class="reel-inner">
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                        <div class="reel-hole"></div>
+                    </div>
+                    <div class="inner-spiral"></div>
+                    <div class="wear-effect"></div>
                 </div>
+                <div class="film-shadow"></div>
             </div>
 
             <div class="projector-light"></div>
