--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     
     <header class="cinema-header">
         <div class="header-container">
+            <!-- Левая бобина с надписью WELCOME -->
+            <div class="film-reel left-reel header-reel">
+                <div class="reel-base">
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="scroll">
+                        <div class="scroll-text">WELCOME</div>
+                    </div>
+                </div>
+            </div>
+
             <nav class="film-navigation">
                 <!-- Пленка с перфорациями -->
                 <div class="film-strip"></div>
@@ -41,6 +56,21 @@
                     </a>
                 </div>
             </nav>
+
+            <!-- Правая бобина с надписью HOME -->
+            <div class="film-reel right-reel header-reel">
+                <div class="reel-base">
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="scroll">
+                        <div class="scroll-text">HOME</div>
+                    </div>
+                </div>
+            </div>
 
             <div class="projector-light"></div>
         </div>
